<resources>
    <string name="app_name">AndroidFinal</string>
    <string name="is_active">is_active</string>
    <string name="list_all">List All</string>
    <string name="add">Add</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calculate_payroll">Calculate Payroll</string>
    <string name="add_parttime_employee">Add PartTime Employee</string>
    <string name="add_fulltime_employee">Add FullTime Employee</string>
    <string name="list_all_employees">List All Employees</string>
    <string name="id">ID</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="birth_year">Birth Year</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="rate">Rate</string>
    <string name="hours_worked">Hours Worked</string>
</resources>