<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <Button
        android:id="@+id/btnCalcPayroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_payroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="calcPayrollEventHandler"
        app:layout_constraintVertical_bias="0.379" />

    <Button
        android:id="@+id/btnAddPTEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_parttime_employee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addPartTimeEventHandler"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnAddFTEmployee2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_fulltime_employee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addFullTimeEventHandler"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/btnListAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_all_employees"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="listAllEmpEventHandler"
        app:layout_constraintVertical_bias="0.297" />

</androidx.constraintlayout.widget.ConstraintLayout>